# dawn

./: .gitignore  Cargo.toml  README.adoc
src/: calendar.rs  dawn_server.rs  handle_events.rs  htmx_handler.rs  lib.rs  main.rs
src/dawn_server/: security_layer.rs
src/htmx_handler/: handle_calendar.rs  handle_timetable.rs
static/: index.css  index.html
templates/: icon.html  index.html
templates/app/: app.html  sidebar.html
templates/calendar/: calendar.html  time_slots.html
templates/components/: calendar-v2.html  calendar.html
templates/components/calendar/: calendar_day.html
templates/components/timetable/: timetable.html  timetable_event.html  timetable_event_new.html
templates/frag/: frag.html
