[package]
name = "dawn"
version = "0.1.0"
edition = "2024"
[profile.dev]
incremental = true

[dependencies]
axum = "0.8.6"
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "compression-gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
