[package]
name = "dawn"
version = "0.1.0"
edition = "2024"
[profile.dev]
incremental = true

[dependencies]
axum = "0.8.6"
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "compression-gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
tower = "0.5.2"
futures-util = "0.3.31"
http = "1.3.1"
openidconnect = "4.0.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.22", features = ["blocking"] }
anyhow = "1.0.100"
url = "2.5.7"
